added styles and got most of it working

--- a/angular.json
+++ b/angular.json
@@ -110,7 +110,7 @@
       "root": "projects/color-input",
       "sourceRoot": "projects/color-input/src",
       "projectType": "library",
-      "prefix": "lib",
+      "prefix": "",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
